html basic structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>My Poem Generator</h1>
+    <form action=""> 
+        <input type="text" placeholder="Topic for the Poem">
+        <input type="submit">
+    </form>
+    <div>Poem</div>
     <footer> 
         This project is coded by Hamdala Mohammed and is an <a href="https://github.com/akuahamda/My-Poem-Project">open-source on Github</a>
     </footer>
