--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="mother">
     <h1>My Poem Generator</h1>
     <form action=""> 
-        <input type="text" placeholder="Topic for the Poem">
-        <input type="submit">
+        <input type="text" class="input-element" placeholder="Topic for the Poem" required>
+        <input type="submit" class="button">
     </form>
-    <div>Poem</div>
+    <div class="poem">Poem</div>
     <footer> 
-        This project is coded by Hamdala Mohammed and is an <a href="https://github.com/akuahamda/My-Poem-Project">open-source on Github</a>
+        This project is coded by Hamdala Mohammed and is an <a href="https://github.com/akuahamda/My-Poem-Project">open-source on Github</a> and is <a href="https://app.netlify.com/teams/akuahamda/sites">hosted on Netlify</a>
     </footer>
+</div>
 </body>
 </html>
