--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Poem Project</title>
     <link rel="stylesheet" href="index.css">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 </head>
 <body>
     <div class="mother">
     <h1>My Poem Generator</h1>
-    <form action=""> 
+    <form id="form-element"> 
         <input type="text" class="input-element" placeholder="Topic for the Poem" required>
         <input type="submit" class="button">
     </form>
-    <div class="poem">Poem</div>
+    <div class="poem" id="poem"></div>
     <footer> 
         This project is coded by Hamdala Mohammed and is an <a href="https://github.com/akuahamda/My-Poem-Project">open-source on Github</a> and is <a href="https://app.netlify.com/teams/akuahamda/sites">hosted on Netlify</a>
     </footer>
 </div>
+<script src="index.js"></script>
 </body>
 </html>
