--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>AI Poem Project</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 </head>
 <body>
     <div class="mother">
     <h1>My Poem Generator</h1>
-    <form id="form-element"> 
+    <form id="form-element" class="instruction"> 
         <input type="text" class="input-element" placeholder="Topic for the Poem" required>
         <input type="submit" class="button">
     </form>
