--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="mother">
-      <h1>My Poem Generator</h1>
+      <h1>My Poem Generator</h>
 
     <div class="form-wrapper">
         <form id="form-element" class="instruction">
@@ -22,11 +22,12 @@
           />
           <input type="submit" class="button" />
         </form>
-        <small class="example">ie flower,paris</small>
+        <small class="example">ie flower,paris or woman</small>
     </div>
        
 
-      <div class="poem hidden" id="poem"></div>
+      <div class="poem hidden" id="poem">
+      </div>
       <footer>
         This project is coded by Hamdala Mohammed and is an
         <a href="https://github.com/akuahamda/My-Poem-Project"
